--- a/trunk/xsdcxx/Makefile.am
+++ b/trunk/xsdcxx/Makefile.am
@@ -6,7 +6,16 @@ AM_CXXFLAGS = @CXXFLAGS@ -I$(top_srcdir)/xsdcxx -I$(top_srcdir)/include -static-
 
 #configure decides whether to use xsd or xsdcxx (must be in PATH)
 
-XSDFLAGS = --type-naming ucc --function-naming java --parser-regex '/(.+)/parse\u$$1/' --generate-doxygen
+# use UpperCamelCase type names, java function naming (getFoo(), etc),
+#put everything in the namespace scnXml,
+#inline simple functions,
+#generate doxygen doc,
+#VS only: --generate-intellisense
+XSDFLAGS = --type-naming ucc --function-naming java\
+--namespace-map =scnXml\
+--generate-inline\
+--generate-doxygen
+
 
 all : inputData.o scenario.o
 
