--- a/trunk/xsdcxx/Makefile.in
+++ b/trunk/xsdcxx/Makefile.in
@@ -168,7 +168,17 @@ libxsdcxx_a_SOURCES = inputData.cpp scenario.cxx
 AM_CXXFLAGS = @CXXFLAGS@ -I$(top_srcdir)/xsdcxx -I$(top_srcdir)/include -static-libgcc -Wall @BOINC_CFLAGS@ #-Werror 
 
 #configure decides whether to use xsd or xsdcxx (must be in PATH)
-XSDFLAGS = --type-naming ucc --function-naming java --parser-regex '/(.+)/parse\u$$1/' --generate-doxygen
+
+# use UpperCamelCase type names, java function naming (getFoo(), etc),
+#put everything in the namespace scnXml,
+#inline simple functions,
+#generate doxygen doc,
+#VS only: --generate-intellisense
+XSDFLAGS = --type-naming ucc --function-naming java\
+--namespace-map =scnXml\
+--generate-inline\
+--generate-doxygen
+
 all: all-am
 
 .SUFFIXES:
