Renamed MorbidityModel as PresentationModel. Altered the directory structure.
git-svn-id: https://openmalaria.googlecode.com/svn@134 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/Makefile.am
+++ b/trunk/model/Makefile.am
@@ -9,7 +9,7 @@ openMalaria_SOURCES = openMalaria.cpp\
  transmissionModel.cpp noVectorControl.cpp VectorControlInternal.cpp vectorControl.cpp\
  CaseManagementModel.cpp OldCaseManagement.cpp NewCaseManagement.cpp\
  EntoIntervention.cpp\
- muellerMorbidityModel.cpp morbidityModel.cpp predetMorbidityModel.cpp pyrogenMorbidityModel.cpp
+ PresentationModel.cpp PresentationModel/Mueller.cpp PresentationModel/Pyrogen.cpp PresentationModel/Predet.cpp
 
 openMalaria_DEPENDENCIES =  $(top_builddir)/xsdcxx/libxsdcxx.a
 
