Changes to the build system to try building in a different directory (failed).
git-svn-id: https://openmalaria.googlecode.com/svn@136 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -90,7 +90,8 @@ AX_CHECK_GLUTL="-lglut"
 if test "$no_gl" = yes -o "$no_glu" = yes -o "$no_glut" = yes; then
    have_glut=no
    AC_MSG_WARN([
-================================================================================WARNING: openGL/GLU/glut not found.
+================================================================================
+WARNING: openGL/GLU/glut not found.
 The GL, GLU and glut libraries are required in order to build the graphical parts
 of the BOINC application API library.
 ================================================================================]) 
