Moved WithinHostModel to reflect new directory structure and renamed OldWithinHostModel to DescriptiveWithinHostModel.
git-svn-id: https://openmalaria.googlecode.com/svn@138 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/graphics/Makefile.am
+++ b/trunk/graphics/Makefile.am
@@ -13,4 +13,4 @@ malariaGraphics_LDADD =  -lboinc_api -lboinc -lboinc_graphics2 -lglut -lGL -lGLU
 
 malariaGraphics_LDFLAGS = @BOINC_LDFLAGS@
 
-AM_CXXFLAGS  = @CXXFLAGS@ @BOINC_CFLAGS@ -I$(top_srcdir)/include -I$(top_srcdir)/include/glew -I$(top_srcdir)/cpp/include
+AM_CPPFLAGS = @CPPFLAGS@ @BOINC_CFLAGS@ -I$(top_srcdir)/include -I$(top_srcdir)/include/glew -I$(top_srcdir)/cpp/include
