--- a/trunk/graphics/Makefile.in
+++ b/trunk/graphics/Makefile.in
@@ -192,7 +192,7 @@ malariaGraphics_SOURCES = Anopheles.cpp AlphaConfiguration.cpp ChartRenderer.cpp
 
 malariaGraphics_LDADD = -lboinc_api -lboinc -lboinc_graphics2 -lglut -lGL -lGLU -lm -lxerces-c -lIL -lILU -lILUT  
 malariaGraphics_LDFLAGS = @BOINC_LDFLAGS@
-AM_CXXFLAGS = @CXXFLAGS@ @BOINC_CFLAGS@ -I$(top_srcdir)/include -I$(top_srcdir)/include/glew -I$(top_srcdir)/cpp/include
+AM_CPPFLAGS = @CPPFLAGS@ @BOINC_CFLAGS@ -I$(top_srcdir)/include -I$(top_srcdir)/include/glew -I$(top_srcdir)/cpp/include
 all: all-am
 
 .SUFFIXES:
