--- a/trunk/model/Makefile.am
+++ b/trunk/model/Makefile.am
@@ -3,8 +3,8 @@ openMalaria_SOURCES = openMalaria.cpp\
  GSLWrapper.cpp timer.cpp boincWrapper.cpp\
  global.cpp summary.cpp population.cpp simulation.cpp \
  drug.cpp proteome.cpp\
- Infection.cpp DescriptiveInfection.cpp DummyInfection.cpp OldIPTInfection.cpp\
- withinHostModel.cpp oldWithinHostModel.cpp OldIPTWithinHostModel.cpp DummyWithinHostModel.cpp\
+ WithinHostModel.cpp WithinHostModel/Descriptive.cpp WithinHostModel/OldIPT.cpp WithinHostModel/Dummy.cpp\
+ WithinHostModel/Infection.cpp WithinHostModel/DescriptiveInfection.cpp WithinHostModel/DummyInfection.cpp WithinHostModel/OldIPTInfection.cpp\
  intervention.cpp event.cpp human.cpp\
  transmissionModel.cpp noVectorControl.cpp VectorControlInternal.cpp vectorControl.cpp\
  CaseManagementModel.cpp OldCaseManagement.cpp NewCaseManagement.cpp\
@@ -13,9 +13,10 @@ openMalaria_SOURCES = openMalaria.cpp\
 
 openMalaria_DEPENDENCIES =  $(top_builddir)/xsdcxx/libxsdcxx.a
 
-openMalaria_LDADD = $(top_builddir)/xsdcxx/libxsdcxx.a -L../lib @LIB_XERC@ @LIB_GSL@ @LIB_GSLCBLAS@ @LIB_BOINC@ @LIB_BOINC_API@ 
+openMalaria_LDADD = $(top_builddir)/xsdcxx/libxsdcxx.a @LIB_XERC@ @LIB_GSL@ @LIB_GSLCBLAS@ @LIB_BOINC@ @LIB_BOINC_API@ 
 
-AM_CXXFLAGS = @CXXFLAGS@ -static-libgcc -Wall @BOINC_CFLAGS@ -I$(top_srcdir)/include -I$(top_srcdir)/xsdcxx #-Werror
+AM_CPPFLAGS = @CPPFLAGS@ @BOINC_CFLAGS@ -I$(top_srcdir)/include -I@top_builddir@/xsdcxx
+AM_CXXFLAGS = @CXXFLAGS@ -static-libgcc -Wall #-Werror
 
 if DARWIN
 export MACOSX_DEPLOYMENT_TARGET=10.4
